<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The accent theme color</string>
    <string name="action_about">About</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist…</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_clear_playlist">Clear playlist</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_new_playlist">New playlist…</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_scan_directory">Scan directory</string>
    <string name="action_search">Search</string>
    <string name="action_set">Set</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_show_lyrics">Show lyrics</string>
    <string name="action_shuffle_album">Shuffle album</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_artist">Shuffle artist</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="add_action">Add</string>
    <string name="add_playlist_title">Add to playlist</string>
    <string name="added_title_to_playing_queue">Added 1 song to the playing queue</string>
    <plurals name="added_x_titles_to_playing_queue">
        <item quantity="other">Added <xliff:g id="count">%1$d</xliff:g> songs to the playing queue</item>
    </plurals>
    <string name="album">album</string>
    <string name="album_artist">Album artist</string>
    <string name="album_or_artist_empty">The title or artist is empty</string>
    <string name="album_tag_editor">Album</string>
    <string name="albums">Albums</string>
    <plurals name="albums_x">
        <item quantity="other">albums</item>
    </plurals>
    <string name="always">Always</string>
    <string name="app_name">Music Player</string>
    <string name="app_shortcut_last_added_short">Last added</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_songs_short">Top songs</string>
    <string name="app_widget_big_name">Music - Big</string>
    <string name="app_widget_card_name">Music - Card</string>
    <string name="app_widget_card_dark_name">Music - Card Dark</string>
    <string name="app_widget_classic_name">Music - Classic</string>
    <string name="app_widget_classic_dark_name">Music - Classic Dark</string>
    <string name="app_widget_small_name">Music - Small</string>
    <string name="app_widget_small_dark_name">Music - Small Dark</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="audio_focus_denied">Audio focus denied</string>
    <string name="author">Author</string>
    <string name="biography">Biography</string>
    <string name="biography_unavailable">Couldn’t find a biography entry for this artist</string>
    <string name="black_theme_name">Black (AMOLED)</string>
    <string name="blacklist">Blacklist</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_current_timer">Cancel current timer</string>
    <string name="card">Card</string>
    <string name="clear_action">Clear</string>
    <string name="clear_blacklist">Clear blacklist</string>
    <string name="clear_playlist_title">Clear playlist</string>
    <string name="clear_playlist_x"><![CDATA[Clear the playlist \"<b>%1$s</b>\"? This can’t be undone!]]></string>
    <string name="clipboard_dollar_wallet_number_copied">Dollar wallet number has been copied to clipboard</string>
    <string name="clipboard_ruble_wallet_number_copied">Ruble wallet number has been copied to clipboard</string>
    <string name="colored_footers">Colored footers</string>
    <string name="could_not_create_playlist">Couldn’t create playlist</string>
    <string name="could_not_download_album_cover">Couldn’t download a matching album cover</string>
    <string name="could_not_scan_files">Could not scan %d files</string>
    <string name="create_action">Create</string>
    <string name="created_playlist_x">Created playlist \"%1$s\"</string>
    <string name="currently_listening_to_x_by_x">Currently listening to %1$s by %2$s</string>
    <string name="dark_theme_name">Dark</string>
    <string name="delete_action">Delete</string>
    <string name="delete_playlist_dialog_title">Delete playlist</string>
    <string name="delete_playlist_s_title">Delete playlist(s)</string>
    <string name="delete_playlist_x"><![CDATA[Delete the playlist \"<b>%1$s</b>\"?]]></string>
    <string name="delete_playlists_dialog_title">Delete playlists</string>
    <string name="delete_song_title">Delete song</string>
    <string name="delete_song_x"><![CDATA[Delete the song \"<b>%1$s</b>\"?]]></string>
    <string name="delete_songs_title">Delete songs</string>
    <plurals name="delete_x_playlists">
        <item quantity="other"><![CDATA[Delete <b>%1$d</b> playlists?]]></item>
    </plurals>
    <plurals name="delete_x_songs">
        <item quantity="other"><![CDATA[Delete <b><xliff:g id="count">%1$d</xliff:g></b> songs?]]></item>
    </plurals>
    <plurals name="deleted_x_songs">
        <item quantity="one">Deleted <xliff:g id="count">%1$d</xliff:g> song</item>
        <item quantity="other">Deleted <xliff:g id="count">%1$d</xliff:g> songs</item>
    </plurals>
    <string name="dialog_ringtone_message">Allow \"Music\" application to modify audio settings</string>
    <string name="dialog_ringtone_title">Set ringtone</string>
    <string name="do_you_want_to_clear_the_blacklist">Do you want to clear the blacklist?</string>
    <string name="do_you_want_to_remove_from_the_blacklist"><![CDATA[Do you want to remove <b>%1$s</b> from the blacklist?]]></string>
    <string name="download_from_last_fm">Download from Last.fm</string>
    <string name="empty">Empty</string>
    <string name="equalizer">Equalizer</string>
    <string name="failed_to_save_playlist">Failed to save playlist (%s)</string>
    <string name="favorites">Favorites</string>
    <string name="finish_current_music_sleep_timer">Finish last song</string>
    <string name="flat">Flat</string>
    <string name="folders">Folders</string>
    <string name="fork_on_github">Fork on GitHub</string>
    <string name="genre">Genre</string>
    <string name="genres">Genres</string>
    <plurals name="inserted_x_songs_into_playlist_x">
        <item quantity="one">Inserted <xliff:g id="count">%1$d</xliff:g> song into the playlist \"%2$s\"</item>
        <item quantity="other">Inserted <xliff:g id="count">%1$d</xliff:g> songs into the playlist \"%2$s\"</item>
    </plurals>
    <string name="intro_label">Introduction</string>
    <string name="label_bit_rate">Bitrate</string>
    <string name="label_details">Details</string>
    <string name="label_edit_playing_queue">Editing playing queue</string>
    <string name="label_file_format">Format</string>
    <string name="label_file_name">File name</string>
    <string name="label_file_path">File path</string>
    <string name="label_file_size">Size</string>
    <string name="label_sampling_rate">Sampling rate</string>
    <string name="label_song_length">Length</string>
    <string name="label_view_playing_queue">View playing queue</string>
    <string name="last_added">Last added</string>
    <string name="library">Library</string>
    <string name="library_categories">Library categories</string>
    <string name="licenses">Licenses</string>
    <string name="light_theme_name">Light</string>
    <string name="listing_files">Listing files</string>
    <string name="lyrics">Lyrics</string>
    <string name="main_activity_name">Music</string>
    <string name="md_back_label">Back</string>
    <string name="md_cancel_label">Cancel</string>
    <string name="md_choose_label">Choose</string>
    <string name="md_custom_label">Custom</string>
    <string name="md_done_label">Done</string>
    <string name="md_error_label">Error</string>
    <string name="md_presets_label">Presets</string>
    <string name="mi_label_button_cta">Get started</string>
    <string name="min">" min."</string>
    <string name="my_top_songs">My top songs</string>
    <string name="navoi_uzbekistan">Navoi, Uzbekistan</string>
    <string name="never">Never</string>
    <string name="new_playlist_title">New playlist</string>
    <string name="new_start_directory">%s is the new start directory</string>
    <string name="no_albums">No albums</string>
    <string name="no_artists">No artists</string>
    <string name="no_audio_ID">Play a song first, then try again</string>
    <string name="no_equalizer">No equalizer found</string>
    <string name="no_genres">No genres</string>
    <string name="no_playlists">No playlists</string>
    <string name="no_results">No results</string>
    <string name="no_songs">No songs</string>
    <string name="not_listed_in_media_store"><![CDATA[<b>%s</b> is not listed in the media store]]></string>
    <string name="nothing_to_scan">Nothing to scan</string>
    <string name="ok">OK</string>
    <string name="only_on_wifi">Only on Wi-Fi</string>
    <string name="open_playing_queue_instruction">Swipe the card in the now playing screen up to reveal the full playing queue</string>
    <string name="past_seven_days">Past 7 days</string>
    <string name="pref_header_audio">Audio</string>
    <string name="pref_header_library">Library</string>
    <string name="pref_summary_audio_ducking">Notifications, navigation etc.</string>
    <string name="pref_summary_gapless_playback">Can cause playback issues on some devices</string>
    <string name="pref_summary_library_categories">Configure visibility and order of library categories</string>
    <string name="pref_summary_remember_last_tab">Go to the last opened tab on launch</string>
    <string name="pref_summary_remember_shuffle">Shuffle mode will stay on when selecting a new list of songs</string>
    <string name="pref_title_audio_ducking">Reduce volume on focus loss</string>
    <string name="pref_title_gapless_playback">Gapless playback</string>
    <string name="pref_title_remember_last_tab">Remember last tab</string>
    <string name="pref_title_remember_shuffle">Remember shuffle</string>
    <string name="write_an_email">Write an email</string>
</resources>