<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory android:title="@string/pref_header_audio">

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="true"
            android:key="audio_ducking"
            android:summary="@string/pref_summary_audio_ducking"
            android:title="@string/pref_title_audio_ducking"
            app:iconSpaceReserved="false" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="true"
            android:key="gapless_playback"
            android:summary="@string/pref_summary_gapless_playback"
            android:title="@string/pref_title_gapless_playback"
            app:iconSpaceReserved="false" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="true"
            android:key="remember_shuffle"
            android:summary="@string/pref_summary_remember_shuffle"
            android:title="@string/pref_title_remember_shuffle"
            app:iconSpaceReserved="false" />

    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</androidx.preference.PreferenceScreen>
