<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.maxfour.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory android:title="@string/pref_header_library">

        <com.maxfour.music.preferences.LibraryPreference
            android:key="library_categories"
            android:summary="@string/pref_summary_library_categories"
            android:title="@string/library_categories" />

        <com.maxfour.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="false"
            android:key="remember_last_tab"
            android:summary="@string/pref_summary_remember_last_tab"
            android:title="@string/pref_title_remember_last_tab" />

    </com.maxfour.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
